Process Hacker

2.1
 * NEW/IMPROVED:
   * Add Pause key shortcut to pause/resume updates
   * Added Ctrl+Tab and Ctrl+Shift+Tab shortcuts
   * Grid is a bit darker
 * FIXED
   * MD5 calculation code for files was wrong

2.0
 * First release in the Process Hacker 2.x branch.